--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark"">
+    <nav class="navbar bg-meu border-bottom border-body">
         <div class="container-fluid">
           <a class="link-logo navbar-brand" href="#">
             <img class="logo" src="images/logo.webp" alt="">
@@ -23,6 +23,14 @@
           </form>
         </div>
       </nav>
+
+      <section id="movie-container">
+        
+      </section>
+
+      <footer>
+        <p>© 2024 Henrique Ribeiro. Todos os direitos reservados.</p>
+      </footer>
     
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
