feat: create a modal to show sinopse

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
         </div>
       </nav>
 
-      <section id="movie-container">
-        
-      </section>
+      <main>
+        <section id="movie-container">
+          
+        </section>
+      </main>
 
       <footer>
         <p>© 2024 Henrique Ribeiro. Todos os direitos reservados.</p>
